--- a/src/wizards/inputs/InputFields.scss
+++ b/src/wizards/inputs/InputFields.scss
@@ -1,6 +1,10 @@
 .input-container {
     display: block;
+    text-align: center;
+    width: 400px;
     margin-top: 20px;
+    // DEV OPTIONS
+    padding-left: 50px;
 }
 
 .input-field {
