--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
     display: grid;
     width: 100%;
     height: 100%;
-    grid-template: "nav main" / auto 1fr;
+    grid-template: "nav main" / 75px auto;
 }
 
 .side-bar {
@@ -12,7 +12,6 @@
 
 .main-container {
     grid-area: main;
-    display: inline-block;
+    display: block;
     width: 100%;
-    height: 4500px;
 }
