--- a/src/wizards/Wizards.scss
+++ b/src/wizards/Wizards.scss
@@ -1,14 +1,15 @@
+@import '../App.scss';
 .form-container {
-    width: 100%;
-    height: 100%;
     background-color: white;
-    padding: 20px 30px 20px 30px;
-    overflow-y: scroll;
+    padding: 20px 20px 20px 20px;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    height: 100vh;
     &.popup {
-        height: auto;
+        max-height: 80vh;
         width: 40vw;
-        max-height: 50vw;
         position: absolute;
         left: 0;
         right: 0;
@@ -17,6 +18,7 @@
         z-index: 999999;
         border: 1px grey solid;
         border-radius: 5px;
+        @include transition(flex 0.5s 0.5 ease-in);
     }
 }
 
@@ -30,6 +32,13 @@
     padding-top: 15px;
     padding-bottom: 15px;
     display: flex;
+    justify-content: center;
+}
+
+.form-body {
+    display: flex-inline;
+    padding-left: 50px;
+    padding-right: 50px;
     justify-content: center;
 }
 
