--- a/src/flowcharts/FlowCharts.scss
+++ b/src/flowcharts/FlowCharts.scss
@@ -7,7 +7,10 @@ $background-color: white;
     height: 96vh;
     margin: $standard-margin;
     display: grid;
-    grid-template: "list workshop action-list" / 100fr auto 100fr;
+    grid-template-columns: 0.2fr 1fr;
+    grid-template-rows: 0.2fr 1fr;
+    grid-template-areas: "list main" "list main";
+    position: relative;
     grid-row-gap: $row-margin;
     row-gap: $row-margin;
     grid-column-gap: $column-margin;
@@ -37,31 +40,37 @@ $background-color: white;
     border-right: 1px lightgrey solid;
 }
 
-.flow-chart-workshop {
-    grid-area: workshop;
-    display: grid;
-    grid-template: "title" 50px "main-area" auto;
+.flow-chart-title {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: white;
+    height: 50px;
+    z-index: 3;
+    box-shadow: 0 5px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    &>p {
+        text-transform: uppercase;
+        font-size: 1.5rem;
+        height: 100%;
+        top: 50%;
+        transform: translateY(25%);
+        margin-top: auto;
+        margin-bottom: auto;
+        vertical-align: center;
+    }
+}
+
+.flow-chart-main-area {
     flex-direction: column;
-    row-gap: 5px;
-    grid-row-gap: 5px;
-    &>.flow-chart-main-area {
-        grid-area: main-area;
-        overflow: hidden;
-    }
-    &>.flow-chart-title {
-        grid-area: title;
-        box-shadow: 0 5px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-        &>p {
-            text-transform: uppercase;
-            font-size: 1.5rem;
-            height: 100%;
-            top: 50%;
-            transform: translateY(25%);
-            margin-top: auto;
-            margin-bottom: auto;
-            vertical-align: center;
-        }
-    }
+    grid-area: main;
+    overflow-x: hidden;
+    position: relative;
+}
+
+.flow-chart-workshop {
+    width: max-content;
+    height: max-content;
 }
 
 .list-position {
@@ -70,7 +79,7 @@ $background-color: white;
     text-align: left;
     padding-left: 10px;
     font-size: 1.1rem;
-    font-style: bold;
+    font-style: oblique;
     display: flex;
     flex-direction: column;
     &:hover {
@@ -170,17 +179,21 @@ $background-color: white;
 .flowchart-container {
     position: relative;
     overflow: hidden;
-    height: 89vh;
 }
 
-.flowchart-button {
+.flowchart {
+    position: relative;
+    overflow: hidden;
+}
+
+.flowchart-action-buttons {
     position: absolute;
-    top: 15px;
-    right: 15px;
-    z-index: 999;
-    &.save-flowchart {}
-    &.reset-flowchart {
-        left: 15px;
-        right: auto;
+    bottom: 10px;
+    right: 10px;
+
+    & > div {
+        margin-bottom: 5px;
+        margin-right: 5px;
+        width: auto;
     }
 }
