--- a/src/documents/details/styles/DocumentDetails.scss
+++ b/src/documents/details/styles/DocumentDetails.scss
@@ -2,7 +2,8 @@
   display: grid;
   grid-template: "details miniature" / 1.2fr 1fr;
   grid-column-gap: 5px;
-  margin: 25px;
+  padding: 1px;
+  margin-bottom: 20px;
   & > div {
     grid-area: details;
     height: available;
@@ -21,7 +22,7 @@
   justify-content: center;
 }
 .miniature {
-  width: 600px;
-  height: 600px;
-  background-color: red;
+  width: 100%;
+  height: 100%;
+  object-fit: scale-down;
 }
