--- a/src/modules/actionblocker/ActionBlocker.scss
+++ b/src/modules/actionblocker/ActionBlocker.scss
@@ -7,17 +7,19 @@
 }
 
 .action-blocker {
-    position: fixed;
-    left: 0px;
-    width: 0;
-    height: 100vh;
-    z-index: 99998;
-    background-color: lightgrey;
-    opacity: 0;
     @include transition( opacity 0.4s 0.1s ease-in-out);
+
+    opacity: 0;
+    background-color: transparent;
+
     &.visible {
+        opacity: 0.2;
+        background-color: lightgray;
         width: 100vw;
-        display: block;
-        opacity: 0.3;
+        height: 100vh;
+        z-index: -1;
+        position: absolute;
+        left: 0;
+        top: 0;
     }
 }
