--- a/src/modules/wizards/inputs/styles/InputFields.scss
+++ b/src/modules/wizards/inputs/styles/InputFields.scss
@@ -1,4 +1,4 @@
-@import '../../../App';
+@import '../../../../App';
 .input-container {
     display: block;
     text-align: center;
@@ -6,6 +6,13 @@
     margin-top: 2px;
     padding-top: 10px;
     padding-bottom: 10px;
+    width: 100%;
+    &.hidden {
+        @include transition(all 0.2);
+        width: 0;
+        height: 0;
+        opacity: 0;
+    }
 }
 
 .input-container.dropdown-search {
